Terrafrom/Module/VPC/main.tf
#VPC 
resource "aws_vpc" "this" {

  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(var.tags,{Name = var.vpc_name})
}
#public subnets
resource "aws_subnet" "public" {

  count                   = length(var.public_subnet_cidrs)
  vpc_id                  = aws_vpc.this.id
  cidr_block              = var.public_subnet_cidrs[count.index]
  availability_zone       = var.azs[count.index]
  map_public_ip_on_launch = true

  tags = merge(var.tags,{Name = "${var.vpc_name}-public-${count.index + 1}"})
}
#private subnets
resource "aws_subnet" "private" {

  count                   = length(var.private_subnet_cidrs)
  vpc_id                  = aws_vpc.this.id
  cidr_block              = var.private_subnet_cidrs[count.index]
  availability_zone       = var.azs[count.index]

  tags = merge(var.tags,{Name = "${var.vpc_name}-private-${count.index + 1}"})
}
#internet gateway
resource "aws_internet_gateway" "this" {

  vpc_id = aws_vpc.this.id

  tags = merge(var.tags,{Name = "${var.vpc_name}-igw"})
}
#EIP allocation for NAT gateway
resource "aws_eip" "nat" {
    domain = "vpc"

  tags = merge(var.tags,{Name = "${var.vpc_name}-nat-eip"})
}
#NAT gateway
resource "aws_nat_gateway" "this" {

  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id

  tags = merge(var.tags,{Name = "${var.vpc_name}-nat-gw"})
  depends_on = [aws_internet_gateway.this]
}
#Public route table
resource "aws_route_table" "public" {

  vpc_id = aws_vpc.this.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  }
  tags = merge(var.tags,{Name = "${var.vpc_name}-public-rt"})
}
#private route table
resource "aws_route_table" "private" {

  vpc_id = aws_vpc.this.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.this.id
  }
  tags = merge(var.tags,{Name = "${var.vpc_name}-private-rt"})
}
#public route table association
resource "aws_route_table_association" "public" {
  count = length(var.public_subnet_cidrs)

  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}
#private route table association
resource "aws_route_table_association" "private" {
  count = length(var.private_subnet_cidrs)

  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
